--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
     <style>
@@ -13,75 +14,45 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            /* overflow is removed to prevent clipping */
             transition: background-color 0.3s ease-in-out;
         }
-
         .youtube-icon-svg {
-            /* 1. Base size is 100% of the parent rectangle */
             width: 100%;
             height: 100%;
-            padding: 0.5em; /* Adds a small margin inside the icon's own space */
+            padding: 0.5em;
             box-sizing: border-box;
-
             fill: #FF0000;
             position: absolute;
-
-            /* 2. Initial state for the animation */
             opacity: 0;
-            transform: scale(0.5); /* Start scaled down */
+            transform: scale(0.5);
             transition: opacity 0.3s ease, transform 0.3s ease;
         }
-
-        /* On hover, hide the rectangle's background */
         .shape-blue:hover {
             background-color: transparent !important;
         }
-
-        /* On hover, trigger the icon's animation */
         .shape-blue:hover .youtube-icon-svg {
-            /* 3. Final state: visible and scaled 1.5x larger than the rectangle */
             opacity: 1;
             transform: scale(1.5);
         }
+        .form-switch{display:flex;align-items:center;justify-content:space-between;margin-top:15px}.form-switch label{margin:0}.form-switch input[type=checkbox]{height:0;width:0;visibility:hidden}.form-switch .switch-label{cursor:pointer;text-indent:-9999px;width:50px;height:28px;background:grey;display:block;border-radius:100px;position:relative}.form-switch .switch-label:after{content:'';position:absolute;top:2px;left:2px;width:24px;height:24px;background:#fff;border-radius:90px;transition:.3s}.form-switch input:checked+.switch-label{background:#4CAF50}.form-switch input:checked+.switch-label:after{left:calc(100% - 2px);transform:translateX(-100%)}
     </style>
 </head>
 <body>
     <div class="background-shapes">
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
-        <div class="shape-blue">
-            <svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg>
-        </div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
+        <div class="shape-blue"><svg class="youtube-icon-svg" viewBox="0 0 28 20" xmlns="http://www.w3.org/2000/svg"><path d="M27.46 3.033c-.32-1.22-.727-2.006-1.28-2.45C25.123.023 23.96 0 22.4 0H5.6C4.04 0 2.877.023 1.82.583c-.553.444-.96 1.23-1.28 2.45C0 4.293 0 6.653 0 10s0 5.707.54 6.967c.32 1.22.727 2.006 1.28 2.45C2.877 19.977 4.04 20 5.6 20h16.8c1.56 0 2.723-.023 3.78-.583.553-.444.96-1.23 1.28-2.45C28 15.707 28 13.347 28 10s0-5.707-.54-6.967zM11.2 14V6l8.4 4-8.4 4z"/></svg></div>
     </div>
 
     <div class="header">
-        <div class="header-title">Trending Analyzer <span>by IIITDMJ</span></div>
+        <div class="header-title">Youtube Trend Analyzer</div>
         <div class="header-controls">
             <div class="theme-switcher">
                 <input type="checkbox" id="theme-toggle">
@@ -90,15 +61,14 @@
             <a href="{{ url_for('logout') }}" class="logout-link">Logout</a>
         </div>
     </div>
-
     <div class="container">
         <div class="tabs">
             <a href="{{ url_for('analyzer') }}" class="tab-link active">Trending Analyzer</a>
-            <a href="{{ url_for('manual') }}" class="tab-link">Manual Predictor</a>
+            <a href="{{ url_for('manual') }}" class="tab-link">Views Predictor</a>
+            <a href="{{ url_for('summarizer') }}" class="tab-link">Video Summarizer</a>
         </div>
-
         <div class="form-card">
-            <h1>Trending Video Analyzer</h1>
+            <h1>Trending Analyzer</h1>
             <form method="POST">
                 <label for="region">Region Code:</label>
                 <select name="region" id="region">
@@ -106,56 +76,54 @@
                     <option value="US" {% if form_data.region == 'US' %}selected{% endif %}>United States</option>
                     <option value="GB" {% if form_data.region == 'GB' %}selected{% endif %}>United Kingdom</option>
                 </select>
-
                 <label for="count">Number of Videos:</label>
                 <input type="number" name="count" id="count" value="{{ form_data.count }}" required>
-
                 <label for="category">Category:</label>
                 <select name="category" id="category">
                     {% for cat in categories %}
                         <option value="{{ cat }}" {% if form_data.category == cat %}selected{% endif %}>{{ cat }}</option>
                     {% endfor %}
                 </select>
-
+                <div class="form-switch">
+                    <label for="allow_shorts">Allow Shorts</label>
+                    <div>
+                        <input type="checkbox" id="allow_shorts" name="allow_shorts" value="true" {% if form_data.allow_shorts %}checked{% endif %}>
+                        <label for="allow_shorts" class="switch-label">Toggle</label>
+                    </div>
+                </div>
                 <button type="submit">Fetch Trending Videos</button>
             </form>
         </div>
-
         {% if result %}
-    <div class="results-card">
-        <h2>Analysis Results</h2>
-        {% for video in result %}
-            <div class="video-block">
-                <div class="video-info">
-                    <b>Title:</b> {{ video.title }}<br>
-                    <b>Channel:</b> {{ video.channelTitle }}<br>
-                    <b>Views:</b> {{ "{:,}".format(video.viewCount) }}<br>
-                    <b>Summary:</b> {{ video.summary }}<br>
+        <div class="results-card">
+            <h2>Analysis Results</h2>
+            {% for video in result %}
+                <div class="video-block">
+                    <div class="video-info">
+                        <b>Title:</b> {{ video.title }}<br>
+                        <b>Channel:</b> {{ video.channelTitle }}<br>
+                        <b>Views:</b> {{ "{:,}".format(video.viewCount) }}<br>
+                        <b>Summary:</b> {{ video.summary }}<br>
+                    </div>
+                    <div class="video-embed">
+                        <iframe width="300" height="170"
+                                src="https://www.youtube.com/embed/{{ video.videoId }}"
+                                frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
                 </div>
-                <div class="video-embed">
-                    <iframe width="300" height="170"
-                            src="https://www.youtube.com/embed/{{ video.videoId }}"
-                            frameborder="0"
-                            allowfullscreen></iframe>
-                </div>
+            {% endfor %}
+            <div class="summary-card">
+                <h3>📌 Quick Overview</h3>
+                <p>{{ topic_summary | safe }}</p>
             </div>
-        {% endfor %}
-
-        <div class="summary-card">
-            <h3>📌 Overall Topic Summary</h3>
-            <p>{{ topic_summary }}</p>
         </div>
+        {% endif %}
     </div>
-{% endif %}
-
-    </div>
-
 <script>
-    // JavaScript remains the same
     document.addEventListener('DOMContentLoaded', () => {
         const themeToggle = document.getElementById('theme-toggle');
         const body = document.body;
-
         const applyTheme = (theme) => {
             if (theme === 'dark') {
                 body.classList.add('dark-theme');
@@ -165,10 +133,8 @@
                 themeToggle.checked = false;
             }
         };
-
         const currentTheme = localStorage.getItem('theme');
         applyTheme(currentTheme);
-
         themeToggle.addEventListener('change', () => {
             if (themeToggle.checked) {
                 localStorage.setItem('theme', 'dark');
@@ -180,6 +146,5 @@
         });
     });
 </script>
-
 </body>
 </html>
